{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 93,
  "lineage": "bd1b7838-d1d1-f080-9021-c8d724928f5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "test_tgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 65533,
            "arn": "arn:aws:ec2:us-east-1:702300973486:transit-gateway/tgw-05012cd256f34de56",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "terraform object",
            "dns_support": "enable",
            "id": "tgw-05012cd256f34de56",
            "owner_id": "702300973486",
            "tags": {
              "Name": "NetOpsTGW-Dev"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "cust_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-084579085523fa301",
            "tags": {
              "Name": "cust_rt"
            },
            "transit_gateway_id": "tgw-05012cd256f34de56"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.test_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "inter_region",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0424a3d00565d973e",
            "tags": {
              "Name": "INTER_REGION"
            },
            "transit_gateway_id": "tgw-05012cd256f34de56"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.test_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "example1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-084579085523fa301_tgw-attach-0106cebb88f1b34ef",
            "resource_id": "vpc-05dd1bfc62ec82f30",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0106cebb88f1b34ef",
            "transit_gateway_route_table_id": "tgw-rtb-084579085523fa301"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.test_tgw",
            "aws_ec2_transit_gateway_route_table.cust_rt",
            "aws_ec2_transit_gateway_vpc_attachment.custa_sub-attach",
            "aws_subnet.private_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "custa_sub-attach",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0106cebb88f1b34ef",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0547d2f3d5d0e8aec"
            ],
            "tags": {
              "Name": "netops_subnets"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-05012cd256f34de56",
            "vpc_id": "vpc-05dd1bfc62ec82f30",
            "vpc_owner_id": "702300973486"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.test_tgw",
            "aws_subnet.private_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0299a60227e7c5769",
            "domain": "vpc",
            "id": "eipalloc-061e439c0de4680e2",
            "network_interface": "eni-06b14c5c53b7ad7e5",
            "private_dns": "ip-10-93-114-31.ec2.internal",
            "private_ip": "10.93.114.31",
            "public_dns": "ec2-3-219-24-229.compute-1.amazonaws.com",
            "public_ip": "3.219.24.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.93.114.10",
            "association_id": "eipassoc-0e44d3648e8876f8c",
            "domain": "vpc",
            "id": "eipalloc-0d122619a9b634a75",
            "instance": "i-0ffd03dd2d5d0f157",
            "network_interface": "eni-04811632211bd4584",
            "private_dns": "ip-10-93-114-10.ec2.internal",
            "private_ip": "10.93.114.10",
            "public_dns": "ec2-52-207-193-172.compute-1.amazonaws.com",
            "public_ip": "52.207.193.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "va1-gtn-mgmt"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.example",
            "aws_network_interface.mgmt",
            "aws_security_group.allow_tls",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pan2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.93.114.20",
            "association_id": "eipassoc-0b57d3e829d4cc2fa",
            "domain": "vpc",
            "id": "eipalloc-07c6ee4b5a3d2d10d",
            "instance": "i-0ffd03dd2d5d0f157",
            "network_interface": "eni-09c6788d5441b94a1",
            "private_dns": "ip-10-93-114-20.ec2.internal",
            "private_ip": "10.93.114.20",
            "public_dns": "ec2-54-161-232-15.compute-1.amazonaws.com",
            "public_ip": "54.161.232.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "va1-gtn-eth01"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.e1",
            "aws_security_group.allow_tls",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ead70c8b3aa72249",
            "arn": "arn:aws:ec2:us-east-1:702300973486:instance/i-0ffd03dd2d5d0f157",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffd03dd2d5d0f157",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "VaNetopsUtil",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04811632211bd4584"
              }
            ],
            "primary_network_interface_id": "eni-04811632211bd4584",
            "private_dns": "ip-10-93-114-10.ec2.internal",
            "private_ip": "10.93.114.10",
            "public_ip": "52.207.193.172",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 180,
                "volume_id": "vol-0bc0950f10f8710f4",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0210e59acaf1a2f3b",
            "tags": {
              "Name": "NetopsFW_terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0407003b032a23d97"
            ]
          },
          "dependencies": [
            "aws_network_interface.mgmt",
            "aws_security_group.allow_tls",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netops_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02e766196cc5ec1fe",
            "owner_id": "702300973486",
            "tags": {
              "Name": "NetopsTransitDevIgw"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061e439c0de4680e2",
            "id": "nat-038130b185728578c",
            "network_interface_id": "eni-06b14c5c53b7ad7e5",
            "private_ip": "10.93.114.31",
            "public_ip": "3.219.24.229",
            "subnet_id": "subnet-0210e59acaf1a2f3b",
            "tags": {
              "Name": "NetOps_Ngw"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "e1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0e0a85a7395317ad9",
                "device_index": 1,
                "instance": "i-0ffd03dd2d5d0f157"
              }
            ],
            "id": "eni-09c6788d5441b94a1",
            "mac_address": "0e:3e:a7:4f:c1:b5",
            "private_ip": "10.93.114.20",
            "private_ips": [
              "10.93.114.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0407003b032a23d97"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0210e59acaf1a2f3b",
            "tags": {
              "Name": "va1-gtn-eth01"
            }
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0268e5b945289d559",
                "device_index": 0,
                "instance": "i-0ffd03dd2d5d0f157"
              }
            ],
            "id": "eni-04811632211bd4584",
            "mac_address": "0e:25:21:72:db:b7",
            "private_ip": "10.93.114.10",
            "private_ips": [
              "10.93.114.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0407003b032a23d97"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0210e59acaf1a2f3b",
            "tags": {
              "Name": "va1-gtn-mgmt"
            }
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01c5e414914765c4f",
            "owner_id": "702300973486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-038130b185728578c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NetopsDevPrivateRt1"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082318acb08ca3519",
            "owner_id": "702300973486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-038130b185728578c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NetopsDevPrivateRt2"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04d9d320756e1c5d1",
            "owner_id": "702300973486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e766196cc5ec1fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NetopsDevPublicRt1"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_internet_gateway.netops_igw",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c47630c3ad86add3",
            "owner_id": "702300973486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e766196cc5ec1fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NetopsDevPublicRt2"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_internet_gateway.netops_igw",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custa_attach",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1b7f2ca940af642",
            "route_table_id": "rtb-01c5e414914765c4f",
            "subnet_id": "subnet-0547d2f3d5d0e8aec"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt1",
            "aws_subnet.private_sub1",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custb_attach",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e9d8c36a8c77b2",
            "route_table_id": "rtb-082318acb08ca3519",
            "subnet_id": "subnet-082a64e4d6c1b2780"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt2",
            "aws_subnet.private_sub2",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_attach1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286362b408a5b077",
            "route_table_id": "rtb-04d9d320756e1c5d1",
            "subnet_id": "subnet-0210e59acaf1a2f3b"
          },
          "dependencies": [
            "aws_internet_gateway.netops_igw",
            "aws_route_table.public_rt1",
            "aws_subnet.public_sub1",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_attach2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0866540f979f1c7f4",
            "route_table_id": "rtb-0c47630c3ad86add3",
            "subnet_id": "subnet-0146025d997e2548d"
          },
          "dependencies": [
            "aws_internet_gateway.netops_igw",
            "aws_route_table.public_rt2",
            "aws_subnet.public_sub2",
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:security-group/sg-0407003b032a23d97",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0407003b032a23d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "netops_mgmt",
            "name_prefix": null,
            "owner_id": "702300973486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "netops_mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:subnet/subnet-0547d2f3d5d0e8aec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.93.114.128/26",
            "id": "subnet-0547d2f3d5d0e8aec",
            "map_public_ip_on_launch": false,
            "owner_id": "702300973486",
            "tags": {
              "Environment": "Dev",
              "Name": "NetopsTransitDevPrivateA",
              "Tenant": "Netops",
              "Type": "Transit"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:subnet/subnet-082a64e4d6c1b2780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.93.114.192/26",
            "id": "subnet-082a64e4d6c1b2780",
            "map_public_ip_on_launch": false,
            "owner_id": "702300973486",
            "tags": {
              "Environment": "Dev",
              "Name": "NetopsTransitDevPrivateB",
              "Tenant": "Netops",
              "Type": "Transit"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:subnet/subnet-0210e59acaf1a2f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.93.114.0/26",
            "id": "subnet-0210e59acaf1a2f3b",
            "map_public_ip_on_launch": false,
            "owner_id": "702300973486",
            "tags": {
              "Environment": "Dev",
              "Name": "NetopsTransitDevPublicA",
              "Tenant": "Netops",
              "Type": "Transit"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:subnet/subnet-0146025d997e2548d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.93.114.64/26",
            "id": "subnet-0146025d997e2548d",
            "map_public_ip_on_launch": false,
            "owner_id": "702300973486",
            "tags": {
              "Environment": "Dev",
              "Name": "NetopsTransitDevPublicB",
              "Tenant": "Netops",
              "Type": "Transit"
            },
            "vpc_id": "vpc-05dd1bfc62ec82f30"
          },
          "dependencies": [
            "aws_vpc.netops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netops_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702300973486:vpc/vpc-05dd1bfc62ec82f30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.93.114.0/24",
            "default_network_acl_id": "acl-0aeeb501d236819a2",
            "default_route_table_id": "rtb-005d718bbfd5fb24c",
            "default_security_group_id": "sg-00d06c58eff117836",
            "dhcp_options_id": "dopt-cee6c0b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05dd1bfc62ec82f30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-005d718bbfd5fb24c",
            "owner_id": "702300973486",
            "tags": {
              "Environment": "Dev",
              "Name": "NetopsTransitDevVpc",
              "Tenant": "Netops",
              "Type": "Transit"
            }
          }
        }
      ]
    }
  ]
}